crates/math-core/tests/snapshots/error_test__incorrect_bracket_in_begin.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{matrix] 1 \\end{matrix}"
---
Error: Disallowed character in text group: ']'.
   ╭─[ <input>:1:14 ]
   │
 1 │ \begin{matrix] 1 \end{matrix}
   │              ┬  
   │              ╰── disallowed character
───╯
