crates/math-core/tests/snapshots/error_test__int_double_sub.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\int__3 x dx"
---
Position: 5, width: 1
BoundFollowedByBound
