crates/math-core/tests/snapshots/error_test__invalid_sup.snap
---
source: crates/math-core/tests/error_test.rs
expression: x^^
---
Position: 2
BoundFollowedByBound
