crates/math-core/tests/snapshots/error_test__kern_eoi_in_unit.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x\\kern1e"
---
Error: Found invalid unit "e".
   ╭─[ <input>:1:8 ]
   │
 1 │ x\kern1e
   │        ┬  
   │        ╰── invalid unit here
───╯
