crates/math-core/tests/snapshots/error_test__left_with_non_delimiter.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\left x 1 \\right)"
---
Position: 6..7
ExpectedDelimiter(
    Left,
)
